buildpacks/nodejs-npm-install/src/snapshots/errors___npm_install_node_build_scripts_metadata_error.snap
---
source: buildpacks/nodejs-npm-install/src/errors.rs
---
! Invalid build script metadata
!
! A participating buildpack has set invalid `[requires.metadata]` for the build plan named `node_build_scripts`.
!
! Expected metadata format:
! [requires.metadata]
! enabled = <bool>
!
! But was:
! [requires.metadata]
! enabled = <string>
!
! If the issue persists and you think you found a bug in the buildpack, reproduce the issue locally with a minimal example. Open an issue in the buildpack's GitHub repository and include the details here:
! https://github.com/heroku/buildpacks-nodejs/issues
